7097
Still broken:
```scala
Welcome to Scala version 2.10.2-20130425-053916-403ba8938f (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_45).
Type in expressions to have them evaluated.
Type :help for more information.

scala> if (false) Array("qwe") else Array()
<console>:8: error: this type parameter must be specified
              if (false) Array("qwe") else Array()
                                                ^

scala> if (false) Array("qwe") else Array[Nothing]()
java.lang.ClassCastException: [Ljava.lang.Object; cannot be cast to [Ljava.lang.String;
```
